<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World</string>
    <string name="ButtonText">I\'m a Button</string>
    <string name="GUI_Message">Look at my GUI</string>
    <string name="checkbox_message">Check this out!</string>
    <string name="clickhere_button">ClICK HERE</string>
    <string name="switch_message">Switch on / off</string>
    <string name="edittext_message">Type Here</string>
    <string name="lab3_EditText1">Type email here</string>
    <string name="lab3_EditText2"> </string>
    <string name="lab3_TextView1">Enter your email address:</string>
    <string name="lab3_TextView2">Type your password:</string>
    <string name="lab3_Button1">LOGIN</string>
    <string name="profileTextView">Your Profile</string>
    <string name="nameTextView">Your Name:</string>
    <string name="nameHint">Enter your name</string>
    <string name="emailHInt">Enter your email</string>
    <string name="pictureTextView">Your Picture:</string>
    <string name="clickButtonTextView">Click the button above to take a picture</string>
    <string name="emailTextView">Your email::</string>
    <string name="goToChatButtonText">Go to chat</string>
    <string name="sendButton">Send</string>
    <string name="receiveButton">Receive</string>
    <string name="goToWeatherButtonText">Go to Weather Forecast</string>
    <string name="goToToolbarButtonText">Go to Toolbar Activity</string>
    <string name="dogActionTitle">Dog Action</string>
    <string name="sheepActionTitle">Sheep Action</string>
    <string name="duckActionTitle">Duck Action</string>
    <string name="overflowChoice">Overflow</string>
    <string name="alert_textview">What is your message?</string>
    <string name="alert_hint">Type here</string>
    <string name="delete">Delete</string>
</resources>
