<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayoutParent1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/GUI_Message"
        android:textSize="30sp" />


    <Button

        android:id="@+id/row2button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview"
        android:layout_alignParentStart="true"
        android:text="@string/clickhere_button" />

    <CheckBox

        android:id="@+id/row2checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview"
        android:layout_alignParentEnd="true"

        android:layout_toEndOf="@id/row2button"

        android:text="@string/checkbox_message" />


    <ImageButton
        android:id="@+id/row3imgbutton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/row2button"
        android:layout_alignParentStart="true"


        android:src="@drawable/flag" />


    <Switch
        android:id="@+id/row3switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/row2button"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/row3imgbutton"

        android:text="@string/switch_message" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row3imgbutton"

        android:layout_gravity="fill"
        android:hint="@string/edittext_message"
        android:inputType="textPersonName|textCapWords" />

</RelativeLayout>