<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutParentVertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LinearLayoutChild1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/GUI_Message"
            android:textSize="30sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayoutChild2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/row2button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/clickhere_button" />

        <CheckBox
            android:id="@+id/row2checkbox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/checkbox_message" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutChild3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/row3imgbutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:src="@drawable/flag" />


        <Switch
            android:id="@+id/row3switch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/switch_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutChild4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_message"
            android:inputType="textPersonName|textCapWords" />

    </LinearLayout>

</LinearLayout>